Opened 14 years ago

Closed 14 years ago

#1371 closed defect (fixed)

fraps: invalid reads

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: fraps
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

http://samples.mplayerhq.hu/V-codecs/I263/i263.avi

(gdb) r -vcodec fraps -i i263.avi -f null -
The program being debugged has been started already.
Start it from the beginning? (y or n) y

Starting program: d:\mingw\msys\1.0\ffmpeg-head-ab7d6cb\ffmpeg_g.exe -vcodec fra
ps -i i263.avi -f null -
[New Thread 3276.0xab0]
ffmpeg version 0.10.2.git-ab7d6cb Copyright (c) 2000-2012 the FFmpeg developers
  built on May 27 2012 11:57:57 with gcc 4.6.1
  configuration: --disable-ffprobe --enable-gpl
  libavutil      51. 55.100 / 51. 55.100
  libavcodec     54. 23.100 / 54. 23.100
  libavformat    54.  6.101 / 54.  6.101
  libavdevice    54.  0.100 / 54.  0.100
  libavfilter     2. 77.100 /  2. 77.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[fraps @ 03bcc7c0] Invalid frame length 3191 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 2355 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 1015 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 3989 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 4443 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 3194 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 3169 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 841 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 8 (should be 126724)
[fraps @ 03bcc7c0] Invalid frame length 3231 (should be 126728)

Program received signal SIGSEGV, Segmentation fault.
decode_frame (avctx=0x3bcc7c0, data=0x22f6e8, data_size=0x22f8a8,
    avpkt=0x22f658) at libavcodec/fraps.c:239
239                     *cr++    = *buf32++;
(gdb) bt
#0  decode_frame (avctx=0x3bcc7c0, data=0x22f6e8, data_size=0x22f8a8,
    avpkt=0x22f658) at libavcodec/fraps.c:239
#1  0x00542637 in avcodec_decode_video2 (avctx=0x3bcc7c0, picture=0x22f6e8,
    got_picture_ptr=0x22f8a8, avpkt=0x22f860) at libavcodec/utils.c:1464
#2  0x0046fe2f in try_decode_frame (st=0x3bd1260, avpkt=<optimized out>,
    options=<optimized out>) at libavformat/utils.c:2315
#3  0x00477dae in avformat_find_stream_info (ic=0x3bc2340, options=0x3bd1820)
    at libavformat/utils.c:2635
#4  0x0040ab87 in opt_input_file (o=0x22fdc8, opt=0x3bd0e86 "i",
    filename=<optimized out>) at ffmpeg.c:4327
#5  0x00413a7f in parse_option (optctx=0x22fdc8, opt=<optimized out>,
    arg=0x3bd0e88 "i263.avi", options=0xb76bc0) at cmdutils.c:305
#6  0x00413ce2 in parse_options (optctx=0x22fdc8, argc=8,
    argv=<optimized out>, options=0xb76bc0,
    parse_arg_function=0x410748 <opt_output_file>) at cmdutils.c:338
#7  0x00b14e95 in main (argc=8, argv=0x3bd0dd0) at ffmpeg.c:5906
(gdb)

Change History (2)

comment:1 by Carl Eugen Hoyos, 14 years ago

Component: undeterminedavcodec
Keywords: fraps added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Summary: fraps crashfraps: invalid reads
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.