fraps: fix version 0/1 input data size check.

Fixes array overread.
Fixes Ticket1371

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 0bae6661cd171abf55cfa4b8970b08c470d65dee)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>